responsive yea boi

--- a/Web-Developer-Course/Dungeon/antri_elf.html
+++ b/Web-Developer-Course/Dungeon/antri_elf.html
@@ -27,7 +27,7 @@
     <!--navbar-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand ms-5" href="antri_home.html">
+            <a class="navbar-brand ms-3" href="antri_home.html">
                 <img src="images/antri_logo.png" alt="logo" height="40" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
                 <p class="fw-bold">Vera Daran, elven mage</p>
             </div>
 
-            <div data-aos="fade-left" class="col-sm-6 mt-3">
+            <div data-aos="fade-down" class="col-sm-6 mt-3">
                 <h3 class="quote fst-italic">
                     "People always look up to Elves for being master magicians and whatnot,
                     but if you get to live that long, you <span class="fw-bold">have</span> to be a master at something"
@@ -109,7 +109,7 @@
         </div>
 
         <div class="row">
-            <div data-aos="fade-right" class="col-sm-6 mt-3">
+            <div data-aos="fade-down" class="col-sm-6 mt-3">
                 <h3 class="fst-italic quote">
                     "We stand impressed at the elves' mastery of magic, we remain eternally grateful at their willingess to share it."
                 </h3>
