--- a/Web-Developer-Course/Dungeon/antri_halfling.html
+++ b/Web-Developer-Course/Dungeon/antri_halfling.html
@@ -27,7 +27,7 @@
     <!--navbar-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand ms-5" href="antri_home.html">
+            <a class="navbar-brand ms-3" href="antri_home.html">
                 <img src="images/antri_logo.png" alt="logo" height="40" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +78,7 @@
                 <img class="img-fluid" id="body_illus" src="images/halfling_ita.png" />
                 <p class="fw-bold">Ita Chul, halfling blacksmith</p>
             </div>
-            <div data-aos="fade-left" class="col-sm-6 mt-3">
+            <div data-aos="fade-down" class="col-sm-6 mt-3">
                 <h3 class="fst-italic quote">
                     "Where do they store all that energy and temper in that tiny body?"
                 </h3>
@@ -106,7 +106,7 @@
         </div>
 
         <div class="row">
-            <div data-aos="fade-right" class="col-sm-6 mt-5">
+            <div data-aos="fade-down" class="col-sm-6 mt-5">
                 <h3 class="fst-italic quote">
                     "They say while a human child plays with blocks, a halfling child plays with hammer and tongs. Great crafters, maybe not so great parents."
                 </h3>
