--- a/Web-Developer-Course/Dungeon/antri_home.html
+++ b/Web-Developer-Course/Dungeon/antri_home.html
@@ -27,7 +27,7 @@
     <!--navbar-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand ms-5" href="antri_home.html">
+            <a class="navbar-brand ms-3" href="antri_home.html">
                 <img src="images/antri_logo.png" alt="logo" height="40" />
                 
             </a>
@@ -67,15 +67,6 @@
         </div>
     </nav>
 
-    <!--Welcome image-->
-    <!--<div class="container-flexible jumbotron-home">
-        <div class="row container-flexible">
-            <div class="col">
-                <img class="jumbotron-image" src="images/welcome_banner.png" alt="antri_banner" />
-            </div>
-        </div>
-    </div>-->
-
     <div class="container-flexible jumbotron-home">
         <img class="jumbotron-image" src="images/welcome_banner.png" alt="antri_banner" />
     </div>
@@ -83,7 +74,7 @@
     <!--Website description-->
     <div class="container">
         <div class="row vertical-align">
-            <div class="col-sm-8 ms-5 mt-5">
+            <div class="col-sm-8 mt-5">
                 <p>
                     This website is about "Antri", a world I created based on a fantasy setting.
                     This project is something I created to practice Bootstrap and website-making
@@ -106,7 +97,7 @@
     <!--Bootstrap card links to other websites-->
     <div class="container">
         <div class="row center">
-            <div class="card m-5" style="width: 22rem;">
+            <div class="card m-5">
                 <img id="blacksmith_card" src="images/blacksmith_website.PNG" class="card-img-top img-fluid mt-2" alt="blacksmith_website">
                 <div class="card-body">
                     <h5 class="card-title"><b>Ita's Blacksmith</b></h5>
@@ -120,10 +111,10 @@
                 </div>
             </div>
 
-            <div class="card m-5" style="width: 22rem;">
+            <div class="card m-5">
                 <img src="images/blacksmith_website.PNG" class="card-img-top img-fluid mt-2" alt="blacksmith_website">
                 <div class="card-body">
-                    <h5 class="card-title">Ita's Blacksmith</h5>
+                    <h5 class="card-title"><b>Ita's Blacksmith</b></h5>
                     <p class="card-text">
                         The idea of this website was to build a shop interface resembling one you would see
                         in a game. To match that idea I used pixel art, which I think came out pretty nice.
@@ -136,10 +127,10 @@
         </div>
 
         <div class="row center">
-            <div class="card m-5" style="width: 22rem;">
+            <div class="card m-5">
                 <img src="images/blacksmith_website.PNG" class="card-img-top img-fluid mt-2" alt="blacksmith_website">
                 <div class="card-body">
-                    <h5 class="card-title">Ita's Blacksmith</h5>
+                    <h5 class="card-title"><b>Ita's Blacksmith</b></h5>
                     <p class="card-text">
                         The idea of this website was to build a shop interface resembling one you would see
                         in a game. To match that idea I used pixel art, which I think came out pretty nice.
@@ -150,10 +141,10 @@
                 </div>
             </div>
 
-            <div class="card m-5" style="width: 22rem;">
+            <div class="card m-5">
                 <img src="images/blacksmith_website.PNG" class="card-img-top img-fluid mt-2" alt="blacksmith_website">
                 <div class="card-body">
-                    <h5 class="card-title">Ita's Blacksmith</h5>
+                    <h5 class="card-title"><b>Ita's Blacksmith</b></h5>
                     <p class="card-text">
                         The idea of this website was to build a shop interface resembling one you would see
                         in a game. To match that idea I used pixel art, which I think came out pretty nice.
