--- a/Web-Developer-Course/Dungeon/antri_deity.html
+++ b/Web-Developer-Course/Dungeon/antri_deity.html
@@ -26,7 +26,7 @@
     <!--navbar-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand ms-5" href="antri_home.html">
+            <a class="navbar-brand ms-3" href="antri_home.html">
                 <img src="images/antri_logo.png" alt="logo" height="40" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,48 +67,39 @@
 
     <div class="container deity-container mb-5">
         <div class="row">
-            <div class="col right m-3">
-                <div class="card" style="width: 16rem;" data-aos="flip-left">
+            <div class="col-sm m-3">
+                <div class="deity-card text-center" data-aos="flip-left">
                     <img src="images/deity_avera.png" class="card-img-top1" alt="avera_c" data-bs-toggle="modal" data-bs-target="#god_modal_avera">
-
                 </div>
             </div>
 
-            <div class="col center m-3">
-                <div class="card" style="width: 16rem;" data-aos="flip-left">
+            <div class="col-sm m-3">
+                <div class="deity-card text-center" data-aos="flip-left">
                     <img src="images/deity_deus.png" class="card-img-top1" alt="deus_c" data-bs-toggle="modal" data-bs-target="#god_modal_deus">
 
                 </div>
             </div>
 
-            <div class="col left m-3">
-                <div class="card" style="width: 16rem;" data-aos="flip-left">
+            <div class="col-sm m-3">
+                <div class="deity-card text-center" data-aos="flip-left">
                     <img src="images/deity_hemiad.png" class="card-img-top1" alt="hemiad_c" data-bs-toggle="modal" data-bs-target="#god_modal_hemiad">
 
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-
-            </div>
-
-            <div class="col left m-3">
-                <div class="card" style="width: 16rem;" data-aos="flip-left">
+            <div class="col-sm m-3">
+                <div class="deity-card text-center" data-aos="flip-left">
                     <img src="images/deity_oros.png" class="card-img-top1" alt="oros_c" data-bs-toggle="modal" data-bs-target="#god_modal_oros">
 
                 </div>
             </div>
 
-            <div class="col right m-3">
-                <div class="card" style="width: 16rem;" data-aos="flip-left">
+            <div class="col-sm m-3">
+                <div class="deity-card text-center" data-aos="flip-left">
                     <img src="images/deity_chec.png" class="card-img-top1" alt="chec_c" data-bs-toggle="modal" data-bs-target="#god_modal_chec">
 
                 </div>
-            </div>
-
-            <div class="col">
-
             </div>
         </div>
     </div>
