--- a/Web-Developer-Course/Dungeon/antri_human.html
+++ b/Web-Developer-Course/Dungeon/antri_human.html
@@ -27,7 +27,7 @@
     <!--navbar-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand ms-5" href="antri_home.html">
+            <a class="navbar-brand ms-3" href="antri_home.html">
                 <img src="images/antri_logo.png" alt="logo" height="40" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
                 <p class="fw-bold">Hall Lightroot, human adventurer</p>
             </div>
 
-            <div class="col-sm-6 mt-3" data-aos="fade-left">
+            <div class="col-sm-6 mt-3" data-aos="fade-down">
                 
 
                 <h3 class="quote fst-italic">
@@ -112,7 +112,7 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-6 mt-3" data-aos="fade-right">
+            <div class="col-sm-6 mt-3" data-aos="fade-down">
 
                 <h3 class="quote fst-italic">
                     "Every race makes stories, humans make them worth listening to"
