--- a/Web-Developer-Course/Dungeon/antri_dwarf.html
+++ b/Web-Developer-Course/Dungeon/antri_dwarf.html
@@ -124,7 +124,7 @@
 
 
             </div>
-            <div data-aos="zoom-in-left" class="col text-center">
+            <div data-aos="zoom-in" class="col text-center">
                 <img class="img-fluid" src="images/dwarf_food.png" />
                 <p class="fw-bold">A dwarven cuisine of boulder soup</p>
             </div>
