--- a/Web-Developer-Course/Dungeon/antri_elf.html
+++ b/Web-Developer-Course/Dungeon/antri_elf.html
@@ -130,7 +130,7 @@
 
 
             </div>
-            <div data-aos="zoom-in-left" class="col text-center">
+            <div data-aos="zoom-in" class="col text-center">
                 <img class="img-fluid" src="images/elf_magic.png" />
                 <p class="fw-bold">Tools of a elven mage</p>
             </div>
