--- a/Web-Developer-Course/Dungeon/antri_halfling.html
+++ b/Web-Developer-Course/Dungeon/antri_halfling.html
@@ -126,7 +126,7 @@
 
 
             </div>
-            <div data-aos="zoom-in-left" class="col text-center">
+            <div data-aos="zoom-in" class="col text-center">
                 <img class="img-fluid" src="images/halfling_crafting.png" />
                 <p class="fw-bold">No anvil is safe from a halfling's relentless strikes</p>
             </div>
