Antri hopefully final responsive fix

--- a/Web-Developer-Course/Dungeon/antri_deity.html
+++ b/Web-Developer-Course/Dungeon/antri_deity.html
@@ -67,20 +67,20 @@
 
     <div class="container deity-container mb-5">
         <div class="row">
-            <div class="col-sm m-3">
+            <div class="col-sm mt-3 mb-2">
                 <div class="deity-card text-center" data-aos="flip-left">
                     <img src="images/deity_avera.png" class="card-img-top1" alt="avera_c" data-bs-toggle="modal" data-bs-target="#god_modal_avera">
                 </div>
             </div>
 
-            <div class="col-sm m-3">
+            <div class="col-sm mt-3 mb-2">
                 <div class="deity-card text-center" data-aos="flip-left">
                     <img src="images/deity_deus.png" class="card-img-top1" alt="deus_c" data-bs-toggle="modal" data-bs-target="#god_modal_deus">
 
                 </div>
             </div>
 
-            <div class="col-sm m-3">
+            <div class="col-sm mt-3 mb-2">
                 <div class="deity-card text-center" data-aos="flip-left">
                     <img src="images/deity_hemiad.png" class="card-img-top1" alt="hemiad_c" data-bs-toggle="modal" data-bs-target="#god_modal_hemiad">
 
@@ -88,14 +88,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm m-3">
+            <div class="col-sm mt-3 mb-2">
                 <div class="deity-card text-center" data-aos="flip-left">
                     <img src="images/deity_oros.png" class="card-img-top1" alt="oros_c" data-bs-toggle="modal" data-bs-target="#god_modal_oros">
 
                 </div>
             </div>
 
-            <div class="col-sm m-3">
+            <div class="col-sm mt-3 mb-2">
                 <div class="deity-card text-center" data-aos="flip-left">
                     <img src="images/deity_chec.png" class="card-img-top1" alt="chec_c" data-bs-toggle="modal" data-bs-target="#god_modal_chec">
 
@@ -112,9 +112,9 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-body">
-                    <!--<div>
-                        <button type="button" class="btn-close deity-modal-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>-->
+                    
+                    <button type="button" class="btn-close deity-modal-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
+                    
 
                     <div class="deity-name">
                         <p class="mt-3">A V E R A</p>
@@ -146,9 +146,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-body">
-                    <!--<div>
-                        <button type="button" class="btn-close deity-modal-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>-->
+                    <button type="button" class="btn-close deity-modal-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
 
                     <div class="deity-name">
                         <p class="mt-3">D E U S</p>
@@ -179,9 +177,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-body">
-                    <!--<div>
-                        <button type="button" class="btn-close deity-modal-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>-->
+                    <button type="button" class="btn-close deity-modal-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
 
                     <div class="deity-name">
                         <p class="mt-3">H E M I A D</p>
@@ -214,9 +210,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-body">
-                    <!--<div>
-                        <button type="button" class="btn-close deity-modal-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>-->
+                    <button type="button" class="btn-close deity-modal-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
 
                     <div class="deity-name">
                         <p class="mt-3">O R O S</p>
@@ -246,9 +240,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-body">
-                    <!--<div>
-                        <button type="button" class="btn-close deity-modal-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>-->
+                    <button type="button" class="btn-close deity-modal-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
 
                     <div class="deity-name">
                         <p class="mt-3">C H E C</p>
