--- a/index.html
+++ b/index.html
@@ -89,5 +89,9 @@
         </a>
     </p>
 
+    <p class="Chapter">
+        <a href="resumeWebsite.html" target="_blank">Resume</a>
+    </p>
+
 </body>
 </html>
