--- a/resumeWebsite.html
+++ b/resumeWebsite.html
@@ -213,7 +213,7 @@
                 <h1 class="section-header center">Projects</h1>
                 <div class="carousel">
                     <figure id="project_1" class="carousel-1 left-carousel carousel-content">
-                        <img src="resumeImages/carousel_1.png" alt="" />
+                        <img src="resumeImages/carousel_1.PNG" alt="" />
                         <figcaption id="project_1_caption" class="caption">
                             <h2>Welcome to Antri!</h2>
                             <p>Website detailing the world of Antri</p>
@@ -224,7 +224,7 @@
                     </figure>
 
                     <figure id="project_2" class="carousel-2 active-carousel carousel-content">
-                        <img src="resumeImages/carousel_2.png" alt="" />
+                        <img src="resumeImages/carousel_2.PNG" alt="" />
                         <figcaption id="project_2_caption" class="caption">
                                 <h2>Adventure In Antri</h2>
                                 <p>A simple game made through html, css, javascript</p>
@@ -233,7 +233,7 @@
                     </figure>
 
                     <figure id="project_3" class="carousel-3 right-carousel carousel-content">
-                        <img src="resumeImages/carousel_3.png" alt="" />
+                        <img src="resumeImages/carousel_3.PNG" alt="" />
                         <figcaption id="project_3_caption" class="caption">
                             <h2>Ita's blacksmith</h2>
                             <p>Website emulating a in-game shop interface</p>
