--- a/resumeWebsite.html
+++ b/resumeWebsite.html
@@ -38,22 +38,35 @@
                 </a>
             </li>
 
+            <li class="nav-item">
+                <a href="#experience" class="nav-link">
+                    <span class="link-text">Experience</span>
+
+                </a>
+            </li>
+
             <li class="logo">
-                <a href="#" class="nav-link">
+                <a href="#intro" class="nav-link">
                     <img src="resumeImages/logo.png" alt="" />
                 </a>
             </li>
 
             <li class="nav-item">
-                <a href="#experience" class="nav-link">
-                    <span class="link-text">Work</span>
-
+                <a href="#projects" class="nav-link">
+                    <span class="link-text">Projects</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a href="#projects" class="nav-link">
-                    <span class="link-text">Project</span>
+                <a href="#skills" class="nav-link">
+                    <span class="link-text">Skills</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a href="#end" class="nav-link">
+                    <span class="link-text">Contact</span>
+
                 </a>
             </li>
         </ul>
