--- a/Web-Developer-Course/Dungeon/antri_creatures.html
+++ b/Web-Developer-Course/Dungeon/antri_creatures.html
@@ -109,7 +109,7 @@
         <div class="row">
             <div data-aos="fade-left" class="col mt-5 mb-5">
                 <h3 class="fst-italic quote">
-                    "It's gonna take me ages to write about all the creatures I have encountered"
+                    "It's gonna take me ages to write about all the creatures I have encountered!"
                 </h3>
                 <p class="fst-italic text-end">-Oyster Chec, Halfling Warlock</p>
 
