--- a/Web-Developer-Course/Dungeon/antri_halfling.html
+++ b/Web-Developer-Course/Dungeon/antri_halfling.html
@@ -91,7 +91,7 @@
                     feet, halflings are deceptively heavy and strong, and are easily able to match the strength of a human or an elf twice their size.
                 </p>
                 <p class="mt-3">
-                    Halflings in general are extremly socialble and friendly, and even gullible. They will often fall for ridiculous lies and stories, to amusement of many
+                    Halflings in general are extremly sociable and friendly, and even gullible. They will often fall for ridiculous lies and stories, to amusement of many
                     tricksters. While halflings tend to be a target of many friendly jokes and pranks, almost no one dares to antagonize a halfling. Halflings are prideful to a fault
                     and have a notoriously short fuse when insulted, in fact, most bar fights that can involve a halfling will involve one. Many who have been attacked by a halfling
                     describe the experience as "being mauled by a compact bear".
@@ -113,7 +113,7 @@
                 <p class="fst-italic text-end">-Damain Lepa, "on halflings"</p>
 
                 <p class="mt-3">
-                    Halflings are masters at making almost anything. Clothes weaved by a halfling are the comftiest, swords forged by a halfling cuts the best, and
+                    Halflings are masters at making almost anything. Clothes weaved by a halfling are the comfiest, swords forged by a halfling cuts the best, and
                     a clock crafted by a halfling is never wrong. Most halflings make their living as some sort of crafters, and often become mentors at guilds after
                     gathering experience. Perfectonists due to the love for their craft and their prideful nature, it is often said that a halfling master scraps a hundred times
                     before finishing a work.
