--- a/Web-Developer-Course/Dungeon/antri_human.html
+++ b/Web-Developer-Course/Dungeon/antri_human.html
@@ -123,7 +123,7 @@
                     If there is one thing that sets apart humans from the other race, it is their ability to make something entertaining. Humans are authors
                     of plays, songs, and stories that are retold and loved by all races. A gifted human can retell the dullest stories as if it was an epic tale
                     and a skilled human musican enchants the whole crowd at a tavern or a concert. Many human settlement holds festivals that hosts plays and sells
-                    the latest novels by renowned actors.
+                    the latest novels by renowned authors.
                 </p>
                 <p class="mt-3">
                     While human authors and bards make every heroic tale worth remembering, they also have a tendency to stretch the truth a bit. People are often
