--- a/resumeWebsite.html
+++ b/resumeWebsite.html
@@ -82,7 +82,7 @@
                     <h1>My name is Jay Kang</h1>
                     <p>
                         I am a computer science major. I like drawing and writing. I also like designing and making websites,
-                        and hope to do make that my career. Yea. That's me, I guess. Drawing is so fun, very fun, too fun, almost.
+                        and hope to make that my career.
                     </p>
 
                     <a href="resume.pdf" target="_blank">View/download my resume ></a>
@@ -102,16 +102,16 @@
                         <p>Sep 2018 - Present</p>
                     </div>
                     <div class="experience-description">
-                        <p><i>B.S in computer science, minor in Game Engineering</i></p>
-                        <p>&#9656GPA 3.913/4.0</p>
+                        <p><i>B.S. in Computer Science, minor in Game Engineering</i></p>
+                        <p>&#9656GPA 3.9/4.0</p>
                         <p>
-                            &#9656Relevant Courses taken: Web Development, AI in games, Machine Learning, Design Project, Software Engineering, Operating Systems, Databases, AI, Object Oriented Programming, Algorithms,
+                            &#9656Relevant courses: Web Development, AI in Games, Machine Learning, Design Project, Software Engineering, Operating Systems, Databases, AI, Object Oriented Programming, Algorithms,
                             Data Structures
                         </p>
                         <p>
                             &#9656The Myron M. Rosenthal Computer Science Award:
-                            Awarded to recognize outstanding academic achievement, service, leadership, and contributions within the NYU
-                            Tandon community.
+                            awarded to recognize outstanding academic achievement, service, leadership, and contributions within the NYU
+                            Tandon community
                         </p>
                     </div>
                 </div>
@@ -233,15 +233,15 @@
                             <p>Goals: Learn bootstrap, draw and write about fantasy world</p>
                         </figcaption>
 
-                        
+
                     </figure>
 
                     <figure id="project_2" class="carousel-2 active-carousel carousel-content">
                         <img id="project_2_img" src="resumeImages/carousel_2.PNG" alt="" />
                         <figcaption id="project_2_caption" class="caption">
-                                <h2>Adventure In Antri</h2>
-                                <p>A simple game made through html, css, javascript</p>
-                                <p>Goals: Learn jquery, make an interactive "website"</p>
+                            <h2>Adventure In Antri</h2>
+                            <p>A simple game made through html, css, javascript</p>
+                            <p>Goals: Learn and experiment with jquery, make an interactive website</p>
                         </figcaption>
                     </figure>
 
@@ -250,9 +250,16 @@
                         <figcaption id="project_3_caption" class="caption">
                             <h2>Ita's blacksmith</h2>
                             <p>Website emulating a in-game shop interface</p>
-                            <p>Goals: Learn jquery UI, </p>
+                            <p>Goals: Learn jquery UI, and the grid system </p>
                         </figcaption>
                     </figure>
+
+                    <div id="right_arrow">
+                        <img src="resumeImages/arrow_right.png" alt="" />
+                    </div>
+                    <div id="left_arrow">
+                        <img src="resumeImages/arrow_left.png" alt="" />
+                    </div>
                 </div>
             </div>
 
