--- a/resumeWebsite.html
+++ b/resumeWebsite.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="resumeStyle.css">
 
-    <link rel="icon" href="resumeImages/soup_item.png" />
+    <link rel="icon" href="resumeImages/logo.png" />
 
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -81,8 +81,9 @@
                 <div class="intro-description">
                     <h1>My name is Jay Kang</h1>
                     <p>
-                        I am a computer science major. I like drawing and writing. I also like designing and making websites,
-                        and hope to make that my career.
+                        I am a computer science major who enjoys designing and making websites,
+                        and hope to make that my career. Besides that, I love drawing and writing,
+                        
                     </p>
 
                     <a href="resume.pdf" target="_blank">View/download my resume ></a>
