--- a/Web-Developer-Course/Dungeon/Adventure In Antri/antri_adventure.html
+++ b/Web-Developer-Course/Dungeon/Adventure In Antri/antri_adventure.html
@@ -217,6 +217,9 @@
                     <div>
                         <button class="choice change_slide char_select_sli">START!</button>
                     </div>
+                    <div>
+                        <p>Disclaimer: The project is a work in progress, so the project is currently more of a proof of concept than a finished product.</p>
+                    </div>
                 </div>
 
 
