--- a/Web-Developer-Course/Dungeon/Adventure In Antri/antri_adventure.html
+++ b/Web-Developer-Course/Dungeon/Adventure In Antri/antri_adventure.html
@@ -218,7 +218,8 @@
                         <button class="choice change_slide char_select_sli">START!</button>
                     </div>
                     <div>
-                        <p>Disclaimer: The project is a work in progress, so the project is currently more of a proof of concept than a finished product.</p>
+                        <p>Disclaimer: The project is a work in progress, so the project is currently more of a proof of concept than a finished product.
+                           (Only 2nd character works for now)</p>
                     </div>
                 </div>
 
