--- a/resumeWebsite.html
+++ b/resumeWebsite.html
@@ -83,7 +83,7 @@
                     <p>
                         I am a computer science major who enjoys designing and making websites,
                         and hope to make that my career. Besides that, I love drawing and writing,
-                        
+                        which I try to incorporate into personal projects I work on.
                     </p>
 
                     <a href="resume.pdf" target="_blank">View/download my resume ></a>
