updated profile picture

--- a/resumeWebsite.html
+++ b/resumeWebsite.html
@@ -76,7 +76,7 @@
 
         <div id="intro">
             <div class="intro-content">
-                <img class="portrait" src="resumeImages/Jay.jpg" alt="" />
+                <img class="portrait" src="resumeImages/Jay_2.jpg" alt="" />
 
                 <div class="intro-description">
                     <h1>My name is Jay Kang</h1>
