--- a/resumeWebsite-Portfolio.html
+++ b/resumeWebsite-Portfolio.html
@@ -6,7 +6,7 @@
     <title>Resume</title>
 
     <link rel="stylesheet" type="text/css" href="resumeStyle.css">
-    <link rel="stylesheet" type="text/css" href="resumeStyle-Resume.css">
+    <link rel="stylesheet" type="text/css" href="resumeStyle-Portfolio.css">
 
     <link rel="icon" href="resumeImages/logo.png" />
 
@@ -61,21 +61,26 @@
         </nav>
 
         <main>
-            <div class="resumePage-content">
-
-                <div class="resumeContainer resumePDF">
-                    <img class="expandSVG" src="resumeImages/expand-solid.svg" width="24px" height="24px"/>
-                    <img class="resumeSVG" src="resume.svg"/>
-                </div>
-
-                <div class="resumeContainer">
-                    <div class="resumeInfo">
-                        <h4>RESUME</h4>
-                        <p>Last updated: 1/2/2024</p>
-                        <p>Download resume</p>
+            <div class="portfolioPage-content">
+                
+                <div class="portfolioContainer">
+                    <h2 class="portfolioCaseStudyHeader">Case studies</h2>
+                    <div class="portfolioCaseStudyContainer">
+                        <div class="caseStudySVG"></div>
+                        <div class="caseStudySVG"></div>
+                        <div class="caseStudySVG"></div>
                     </div>
-                    
                 </div>
+
+                <div class="sideProjectContainer">
+                    <h2 class="sideProjectHeader">Other projects</h2>
+                    <div class="sideProjectSVGContainer">
+                        <div class="sideProjectSVG"></div>
+                        <div class="sideProjectSVG"></div>
+                        <div class="sideProjectSVG"></div>
+                    </div>
+                </div>
+
 
             </div>
         </main>
